# CuteVR

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE.md  README.md
cmake/: ConvertNamingStyle.cmake  DecorateModule.cmake  FindOpenVR.cmake  InstallModule.cmake  ModuleConfiguration.cmake  PackageConfiguration.cmake  PackageUninstallation.cmake  PrintOption.cmake  TestModule.cmake
documentation/: CodingStyle.doxygen  Concepts.doxygen  FrequentlyAskedQuestions.doxygen  MainPage.doxygen  Namespace.doxygen  UsingSteamVR.doxygen
modules/: CMakeLists.txt
modules/Core/: CMakeLists.txt
modules/Core/documentation/: Core.doxygen  Extensions.doxygen  Interfaces.doxygen  InternalsAndEmulators.doxygen  Namespace.doxygen  SystemsDevicesAndComponents.doxygen
modules/Core/include/CuteVR/: Component.hpp  ConfigurationServer.hpp  Device.hpp  DeviceServer.hpp  DriverServer.hpp  Identifier.hpp  Macros.hpp  System.hpp
modules/Core/include/CuteVR/Components/: Availability.hpp  Description.hpp  Pose.hpp
modules/Core/include/CuteVR/Components/Geometry/: Cone.hpp  ConeFrustum.hpp  Cube.hpp  Cuboid.hpp  Cylinder.hpp  Ellipsoid.hpp  Pyramid.hpp  PyramidFrustum.hpp  Sphere.hpp
modules/Core/include/CuteVR/Components/Input/: Axis.hpp  Button.hpp  Key.hpp  Wheel.hpp
modules/Core/include/CuteVR/Components/Interaction/: Activity.hpp  Ear.hpp  Eye.hpp  Hand.hpp
modules/Core/include/CuteVR/Components/Output/: Display.hpp  Haptic.hpp  Speaker.hpp
modules/Core/include/CuteVR/Components/Peripheral/: Battery.hpp  Camera.hpp
modules/Core/include/CuteVR/Components/Sensor/: Accelerometer.hpp  Gyroscope.hpp  Magnetometer.hpp  Proximity.hpp
modules/Core/include/CuteVR/Configurations/: Core.hpp
modules/Core/include/CuteVR/Devices/: Generic.hpp  TrackedDevice.hpp
modules/Core/include/CuteVR/Devices/Controller/: Generic.hpp
modules/Core/include/CuteVR/Devices/HeadMountedAudio/: Generic.hpp
modules/Core/include/CuteVR/Devices/HeadMountedDisplay/: Generic.hpp
modules/Core/include/CuteVR/Devices/Tracker/: Generic.hpp
modules/Core/include/CuteVR/Devices/TrackingReference/: Generic.hpp
modules/Core/include/CuteVR/Emulator/: OpenVR.hpp
modules/Core/include/CuteVR/Extension/: CuteException.hpp  Either.hpp  Optional.hpp  Trilean.hpp
modules/Core/include/CuteVR/Interface/: Cloneable.hpp  CyclicHandler.hpp  Destroyable.hpp  EqualityComparable.hpp  EventHandler.hpp  Initializable.hpp  OrderComparable.hpp  Serializable.hpp  TrackingHandler.hpp  Updatable.hpp
modules/Core/include/CuteVR/Internal/: Color.hpp  DefaultAvailabilityProvider.hpp  DefaultAxesProvider.hpp  DefaultButtonsProvider.hpp  DefaultDescriptionsProvider.hpp  DefaultDisplaysProvider.hpp  DefaultEyesProvider.hpp  DefaultHandsProvider.hpp  DefaultPoseProvider.hpp  Matrix3x3.hpp  Matrix3x4.hpp  Matrix4x4.hpp  Property.hpp  Quaternion.hpp  TestComponent.hpp  TestDevice.hpp  TestHelper.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
modules/Core/source/: Component.cpp  ConfigurationServer.cpp  Device.cpp  DeviceServer.cpp  DriverServer.cpp  Identifier.cpp  System.cpp
modules/Core/source/Components/: Availability.cpp  Description.cpp  Pose.cpp
modules/Core/source/Components/Geometry/: Cube.cpp  Cuboid.cpp  Sphere.cpp
modules/Core/source/Components/Input/: Axis.cpp  Button.cpp
modules/Core/source/Components/Interaction/: Activity.cpp  Eye.cpp  Hand.cpp
modules/Core/source/Components/Output/: Display.cpp
modules/Core/source/Components/Peripheral/: Battery.cpp  Camera.cpp
modules/Core/source/Components/Sensor/: Accelerometer.cpp  Gyroscope.cpp  Magnetometer.cpp  Proximity.cpp
modules/Core/source/Configurations/: Core.cpp
modules/Core/source/Devices/: TrackedDevice.cpp
modules/Core/source/Devices/Controller/: Generic.cpp
modules/Core/source/Devices/HeadMountedDisplay/: Generic.cpp
modules/Core/source/Devices/Tracker/: Generic.cpp
modules/Core/source/Devices/TrackingReference/: Generic.cpp
modules/Core/source/Extension/: CuteException.cpp  Trilean.cpp
modules/Core/source/Internal/: DefaultAvailabilityProvider.cpp  DefaultAxesProvider.cpp  DefaultButtonsProvider.cpp  DefaultDescriptionsProvider.cpp  DefaultDisplaysProvider.cpp  DefaultEyesProvider.cpp  DefaultHandsProvider.cpp  DefaultPoseProvider.cpp
modules/Core/test/: ComponentTest.cpp  ConfigurationServerTest.cpp  DeviceTest.cpp  SystemTest.cpp
modules/Core/test/Components/: AvailabilityTest.cpp  DescriptionTest.cpp  PoseTest.cpp
modules/Core/test/Components/Geometry/: CubeTest.cpp  CuboidTest.cpp  SphereTest.cpp
modules/Core/test/Components/Input/: AxisTest.cpp  ButtonTest.cpp
modules/Core/test/Components/Interaction/: ActivityTest.cpp  EyeTest.cpp  HandTest.cpp
modules/Core/test/Components/Output/: DisplayTest.cpp
modules/Core/test/Components/Peripheral/: BatteryTest.cpp  CameraTest.cpp
modules/Core/test/Components/Sensor/: AccelerometerTest.cpp  GyroscopeTest.cpp  MagnetometerTest.cpp  ProximityTest.cpp
modules/Core/test/Devices/: TrackedDeviceTest.cpp
modules/Core/test/Devices/Controller/: GenericTest.cpp
modules/Core/test/Devices/HeadMountedDisplay/: GenericTest.cpp
modules/Core/test/Devices/Tracker/: GenericTest.cpp
modules/Core/test/Devices/TrackingReference/: GenericTest.cpp
modules/Core/test/Extension/: CuteExceptionTest.cpp  EitherTest.cpp  OptionalTest.cpp  TrileanTest.cpp
modules/Core/test/Internal/: ColorTest.cpp  DefaultAvailabilityProviderTest.cpp  DefaultAxesProviderTest.cpp  DefaultButtonsProviderTest.cpp  DefaultDescriptionsProviderTest.cpp  DefaultDisplaysProviderTest.cpp  DefaultEyesProviderTest.cpp  DefaultHandsProviderTest.cpp  DefaultPoseProviderTest.cpp  Matrix3x3Test.cpp  Matrix3x4Test.cpp  Matrix4x4Test.cpp  PropertyTest.cpp  QuaternionTest.cpp  Vector2Test.cpp  Vector3Test.cpp  Vector4Test.cpp
